--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   terraform:
-    runs-on: Ubuntu 22.04.4 LTS
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
