--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,17 +25,17 @@ jobs:
 
     - name: Initialize Terraform
       run: terraform init
-
+    
     - name: Set AWS credentials
       run: |
-        echo "AWS_ACCESS_KEY_ID = ${{secrets.AWS_ACCESS_KEY_ID}}" >> $GITHUB_ENV
-        echo "AWS_SECRET_ACCESS_KEY = ${{secrets.AWS_SECRET_ACCESS_KEY}}" >> $GITHUB_ENV
-        echo "AWS_DEFAULT_REGION = ${{secrets.AWS_REGION}}" >> $GITHUB_ENV
-        
-        export "AWS_ACCESS_KEY_ID = ${{secrets.AWS_ACCESS_KEY_ID}}"
-        export "AWS_SECRET_ACCESS_KEY = ${{secrets.AWS_SECRET_ACCESS_KEY}}"
-        export "AWS_DEFAULT_REGION = ${{secrets.AWS_REGION}}"
-   
+        echo "AWS_ACCESS_KEY_ID=${{secrets.AWS_ACCESS_KEY_ID}}" >> $GITHUB_ENV
+        echo "AWS_SECRET_ACCESS_KEY=${{secrets.AWS_SECRET_ACCESS_KEY}}" >> $GITHUB_ENV
+        echo "AWS_DEFAULT_REGION=${{secrets.AWS_REGION}}" >> $GITHUB_ENV
+    
+        export AWS_ACCESS_KEY_ID=${{secrets.AWS_ACCESS_KEY_ID}}
+        export AWS_SECRET_ACCESS_KEY=${{secrets.AWS_SECRET_ACCESS_KEY}}
+        export AWS_DEFAULT_REGION=${{secrets.AWS_REGION}}
+
     # - name: Install AWS CLI
     #   run: |
     #     sudo apt-get update
