--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       uses: hashicorp/setup-terraform@v2
       with:
         terraform_version: 1.9.1
-      
+
     - name: Set AWS credentials
       run: |
         echo "AWS_ACCESS_KEY_ID=${{secrets.AWS_ACCESS_KEY_ID}}" >> $GITHUB_ENV
@@ -32,19 +32,22 @@ jobs:
         export AWS_ACCESS_KEY_ID=${{secrets.AWS_ACCESS_KEY_ID}}
         export AWS_SECRET_ACCESS_KEY=${{secrets.AWS_SECRET_ACCESS_KEY}}
         export AWS_DEFAULT_REGION=${{secrets.AWS_REGION}}
+
+    - name: Install AWS CLI
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y awscli
+
+    - name: Configure AWS CLI
+      run: |
+        aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+        aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+        aws configure set region $AWS_DEFAULT_REGION
     
     - name: Initialize Terraform
       run: terraform init
       working-directory: ./.github/workflows/
-      
-    # - name: Install AWS CLI
-    #   run: |
-    #     sudo apt-get update
-    #     sudo apt-get install -y awscli
 
-    # - name: Configure AWS CLI
-    #   run: aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID && aws configure aws_secret_access_key_id $AWS_SECRET_ACCESS_KEY_ID 
-    
     - name: Validate Terraform
       run: terraform validate
       working-directory: ./.github/workflows/
@@ -54,9 +57,10 @@ jobs:
       working-directory: ./.github/workflows/
 
     - name: Terraform Apply
-      if: (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev') && (github.event_name == 'push'||github.event_name == 'pull')
+      if: (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev') && (github.event_name == 'push' || github.event_name == 'pull_request')
       run: terraform apply --auto-approve
       working-directory: ./.github/workflows/
 
-    - name: CLeanup
-      run: terraform destroy
+    - name: Cleanup
+      run: terraform destroy --auto-approve
+      working-directory: ./.github/workflows/
