--- a/.github/workflows/actions_pipeline.yml
+++ b/.github/workflows/actions_pipeline.yml
@@ -68,6 +68,6 @@ jobs:
       run: terraform apply --auto-approve
       working-directory: ./.github/workflows/
 
-    - name: Cleanup
-      run: terraform destroy --auto-approve
-      working-directory: ./.github/workflows/
+    # - name: Cleanup
+    #   run: terraform destroy --auto-approve
+    #   working-directory: ./.github/workflows/
