--- a/.github/workflows/actions_pipeline.yml
+++ b/.github/workflows/actions_pipeline.yml
@@ -45,11 +45,6 @@ jobs:
         aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
         aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
         aws-region: us-east-1
-    
-    - name: Create PEM file from secret
-      run: |
-        echo "${{ secrets.PEM_FILE_CONTENTS }}" > devops_assignment.pem
-        chmod 400 devops_assignment.pem
 
     - name: Initialize Terraform
       run: terraform init
@@ -68,6 +63,18 @@ jobs:
       run: terraform apply --auto-approve
       working-directory: ./.github/workflows/
 
+    - name: Create PEM file from secret
+      run: |
+        echo "${{ secrets.PEM_FILE_CONTENTS }}" > devops_assignment.pem
+        chmod 400 devops_assignment.pem
+
+    - name: Run Ansible playbook with Inventory
+        run: |
+              ansible-playbook -i ./hosts.ini ./ansible_playbook.yaml
+        env:
+              ANSIBLE_PRIVATE_KEY_FILE: ./devops_assignment.pem
+              ANSIBLE_HOST_KEY_CHECKING: False
+    
     # - name: Cleanup
     #   run: terraform destroy --auto-approve
     #   working-directory: ./.github/workflows/
