--- a/.github/workflows/hosts.ini
+++ b/.github/workflows/hosts.ini
@@ -1,2 +1,2 @@
 [all]
-100.26.136.16 ansible_user=ubuntu ansible_ssh_private_key_file=./devops_assignment.pem
+100.26.136.16 ansible_user=ubuntu ansible_ssh_private_key_file=./.github/workflows/devops_assignment.pem
