--- a/.github/workflows/ansible_playbook.yaml
+++ b/.github/workflows/ansible_playbook.yaml
@@ -1,25 +1,58 @@
 ---
-- name: Configure EC2 instance with Docker, Docker Compose, and Node.js
+- name: Install Docker and Docker Compose
   hosts: all
   become: yes
+
   tasks:
-    - name: Update apt cache
+    - name: Update apt package index
       apt:
         update_cache: yes
 
-    - name: Install necessary packages
+    - name: Install necessary dependencies
       apt:
         name:
-          - docker.io
-          - docker-compose
+          - apt-transport-https
+          - ca-certificates
+          - curl
+          - software-properties-common
         state: present
 
-    - name: Start Docker service
-      systemd:
+    - name: Add Docker GPG key
+      apt_key:
+        url: https://download.docker.com/linux/ubuntu/gpg
+        state: present
+
+    - name: Add Docker repository
+      apt_repository:
+        repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
+        state: present
+        update_cache: yes
+
+    - name: Install Docker
+      apt:
+        name: docker-ce
+        state: present
+
+    - name: Install pip
+      apt:
+        name: python3-pip
+        state: present
+
+    - name: Install Docker Compose using pip
+      pip:
+        name: docker-compose
+
+    - name: Ensure Docker service is started
+      service:
         name: docker
         state: started
         enabled: yes
 
+    - name: Add current user to Docker group
+      user:
+        name: "{{ ansible_user }}"
+        groups: docker
+        append: yes
 
     - name: Verify Docker installation
       command: docker --version
