--- a/.github/workflows/hosts.ini
+++ b/.github/workflows/hosts.ini
@@ -1,2 +1,2 @@
 [all]
-54.166.163.242 ansible_user=ubuntu ansible_ssh_private_key_file=./.github/workflows/devops_keypair
+54.166.163.242 ansible_user=ubuntu ansible_ssh_private_key_file=./.github/workflows/devops_keypair.pem
