--- a/.github/workflows/ansible_playbook.yaml
+++ b/.github/workflows/ansible_playbook.yaml
@@ -1,58 +1,24 @@
 ---
-- name: Install Docker and Docker Compose
-  hosts: all
+- name: Configure EC2 instance with Docker, Docker Compose, and Node.js
+  hosts: ec2_instances
   become: yes
-
   tasks:
-    - name: Update apt package index
+    - name: Update apt cache
       apt:
         update_cache: yes
 
-    - name: Install necessary dependencies
+    - name: Install necessary packages
       apt:
         name:
-          - apt-transport-https
-          - ca-certificates
-          - curl
-          - software-properties-common
+          - docker.io
+          - docker-compose
         state: present
 
-    - name: Add Docker GPG key
-      apt_key:
-        url: https://download.docker.com/linux/ubuntu/gpg
-        state: present
-
-    - name: Add Docker repository
-      apt_repository:
-        repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
-        state: present
-        update_cache: yes
-
-    - name: Install Docker
-      apt:
-        name: docker-ce
-        state: present
-
-    - name: Install pip
-      apt:
-        name: python3-pip
-        state: present
-
-    - name: Install Docker Compose using pip
-      pip:
-        name: docker-compose
-
-    - name: Ensure Docker service is started
-      service:
+    - name: Start Docker service
+      systemd:
         name: docker
         state: started
         enabled: yes
-
-    - name: Add current user to Docker group
-      user:
-        name: "{{ ansible_user }}"
-        groups: docker
-        append: yes
 
     - name: Verify Docker installation
       command: docker --version
