--- a/.github/workflows/ansible_playbook.yaml
+++ b/.github/workflows/ansible_playbook.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Configure EC2 instance with Docker, Docker Compose, and Node.js
+- name: Configure EC2 instance with Docker, Docker Compose
   hosts: all
   become: yes
   tasks:
@@ -7,12 +7,17 @@
       apt:
         update_cache: yes
 
-    - name: Install necessary packages
+    - name: Install necessary packages including Docker, Docker Compose
       apt:
         name:
           - docker.io
           - docker-compose
+          # - python3
+          # - python3-pip
         state: present
+      # Add notify and handler for restarting Docker service if needed
+      # notify:
+      #   - Restart Docker service
 
     - name: Start Docker service
       systemd:
@@ -20,18 +25,12 @@
         state: started
         enabled: yes
 
-    - name: Verify Docker installation
-      command: docker --version
-      register: docker_version
+    - name: Copy Docker Compose file
+      copy:
+        src: docker-compose.yaml
+        dest: /home/ubuntu/docker-compose.yaml
 
-    - name: Verify Docker Compose installation
-      command: docker-compose --version
-      register: docker_compose_version
-
-    - name: Print Docker version
-      debug:
-        msg: "{{ docker_version.stdout }}"
-
-    - name: Print Docker Compose version
-      debug:
-        msg: "{{ docker_compose_version.stdout }}"
+    - name: Bring up Docker Compose services
+      shell: |
+        cd /home/ubuntu
+        docker-compose up -d
