--- a/.github/workflows/ansible_playbook.yaml
+++ b/.github/workflows/ansible_playbook.yaml
@@ -7,14 +7,14 @@
       apt:
         update_cache: yes
 
-    - name: Install necessary packages including Docker, Docker Compose
-      apt:
-        name:
-          - docker.io
-          - docker-compose
+#    - name: Install necessary packages including Docker, Docker Compose
+#      apt:
+#        name:
+#          - docker.io
+#          - docker-compose
           # - python3
           # - python3-pip
-        state: present
+#        state: present
       # Add notify and handler for restarting Docker service if needed
       # notify:
       #   - Restart Docker service
