--- a/.github/workflows/hosts.ini
+++ b/.github/workflows/hosts.ini
@@ -1,2 +1,2 @@
 [all]
-{{ web_instance_public_ip }} ansible_user=ubuntu ansible_ssh_private_key_file=./.github/workflows/devops_keypair.pem
+52.3.248.92 ansible_user=ubuntu ansible_ssh_private_key_file=./.github/workflows/devops_keypair.pem
