--- a/.github/workflows/actions_pipeline.yml
+++ b/.github/workflows/actions_pipeline.yml
@@ -67,8 +67,8 @@ jobs:
       run: |
         echo "${{ secrets.PEM_FILE_CONTENTS }}" > ./.github/workflows/devops_keypair.pem
         chmod 600 ./.github/workflows/devops_keypair.pem
-        eval "$(ssh-agent -s)"
-        ssh-add ~/.github/workflows/devops_keypair
+        # eval "$(ssh-agent -s)"
+        # ssh-add ~/.github/workflows/devops_keypair
 
     - name: Run Ansible playbook with Inventory
       run: |
