--- a/.github/workflows/ansible_playbook.yaml
+++ b/.github/workflows/ansible_playbook.yaml
@@ -1,36 +1,62 @@
 ---
-- name: Configure EC2 instance with Docker, Docker Compose
+- name: Install Docker and Docker Compose
   hosts: all
   become: yes
+
   tasks:
-    - name: Update apt cache
+    - name: Update apt package index
       apt:
         update_cache: yes
 
-#    - name: Install necessary packages including Docker, Docker Compose
-#      apt:
-#        name:
-#          - docker.io
-#          - docker-compose
-          # - python3
-          # - python3-pip
-#        state: present
-      # Add notify and handler for restarting Docker service if needed
-      # notify:
-      #   - Restart Docker service
+    - name: Install necessary dependencies
+      apt:
+        name:
+          - apt-transport-https
+          - ca-certificates
+          - curl
+          - software-properties-common
+        state: present
 
-    - name: Start Docker service
-      systemd:
+    - name: Add Docker GPG key
+      apt_key:
+        url: https://download.docker.com/linux/ubuntu/gpg
+        state: present
+
+    - name: Add Docker repository
+      apt_repository:
+        repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
+        state: present
+        update_cache: yes
+
+    - name: Install Docker
+      apt:
+        name: docker-ce
+        state: present
+
+    - name: Ensure Docker service is started
+      service:
         name: docker
         state: started
         enabled: yes
 
-    - name: Copy Docker Compose file
-      copy:
-        src: docker-compose.yaml
-        dest: /home/ubuntu/docker-compose.yaml
+    - name: Add current user to Docker group
+      user:
+        name: "{{ ansible_user }}"
+        groups: docker
+        append: yes
 
-    - name: Bring up Docker Compose services
-      shell: |
-        cd /home/ubuntu
-        docker-compose up -d
+    - name: Verify Docker installation
+      command: docker --version
+      register: docker_version
+
+    - name: Verify Docker Compose installation
+      command: docker-compose --version
+      register: docker_compose_version
+
+    - name: Print Docker version
+      debug:
+        msg: "{{ docker_version.stdout }}"
+
+    - name: Print Docker Compose version
+      debug:
+        msg: "{{ docker_compose_version.stdout }}"
