--- a/.github/workflows/ansible_playbook.yaml
+++ b/.github/workflows/ansible_playbook.yaml
@@ -7,18 +7,18 @@
       apt:
         update_cache: yes
 
-   - name: Install necessary packages including Docker, Docker Compose
-     apt:
-       name:
-        #  - docker.io
-        #  - docker-compose
-         - curl -L "https://github.com/docker/compose/releases/download/1.25.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-         - chmod +x /usr/local/bin/docker-compose
-         - ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
-         - docker-compose --version
-          # - python3
-          # - python3-pip
-       state: present
+   # - name: Install necessary packages including Docker, Docker Compose
+   #   apt:
+   #     name:
+   #      #  - docker.io
+   #      #  - docker-compose
+   #       - curl -L "https://github.com/docker/compose/releases/download/1.25.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+   #       - chmod +x /usr/local/bin/docker-compose
+   #       - ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+   #       - docker-compose --version
+   #        # - python3
+   #        # - python3-pip
+   #     state: present
       # Add notify and handler for restarting Docker service if needed
       # notify:
       #   - Restart Docker service
